# rag-python

./: .gitignore  pyproject.toml  rag.proto
src/: config.py  main.py
src/controllers/: grpc_server.py
src/infrastructure/: db.py  embeddings.py  llm_client.py
src/proto/: rag_pb2.py  rag_pb2_grpc.py
src/services/: chunking.py  document_extractor.py  llm_service.py  retrieval_service.py  storage_service.py
