[tool.poetry.dependencies]
python   = "^3.11"
grpcio   = "^1.62.0"
protobuf = "^4.25.0"
asyncpg  = "^0.29.0"

# RAG stack
langchain              = "^0.1.0"
langchain-community    = "^0.0.20"
langchain-huggingface  = "^0.0.3"
sentence-transformers  = "^2.5.0"
pgvector               = "^0.2.4"

# Document parsing
pypdf       = "^4.0.0"
python-docx = "^1.1.0"
unstructured = "^0.12.0"  # optional, handles many formats

# LLM (placeholder - pick one)
# openai = "^1.14.0"
# or use HuggingFace inference / Ollama locally